--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -377,7 +377,7 @@ For each of the two tasks, the final candidates from which participants made the
 
 For the restaurant task, we selected six restaurants at random from Yelp's list of popular eateries for each of the two cities.  In addition, for each of the two cities, we generated 12 social network profiles for hypothetical friends who lived in either city, to accompany the participant to the restaurant.  Each friend's profile expressed their street address and preference for favourite cuisine type which could be taken into consideration by participants during the venue selection process. 
 
-For the B conditions we prepared, for each dataset condition in each task, a spreadsheet listing key statistics for each of the relevant candidates (e.g., universities or restaurants) assembled from each of a pre-selected set of 6 popular data sources (university and restaurant guides), and collated them into Excel spreadsheets.  
+For the B conditions, we prepared a spreadsheet listing key statistics for each of the relevant candidates (e.g., universities or restaurants) using data from of a pre-selected set of 6 popular data sources (university and restaurant guides), and collated them into Excel spreadsheets.  
 
 % We established that our two tasks would entail choosing a university and selecting a restaurant for a large social event.  These tasks were selected because in PS.1, the majority of people stated that they had used multiple websites for such tasks.  We used two different variables for each task.  where the restaurant was located (Glasgow and Cambridge) and which subject people chose (sport science and history).  For the restaurant task, the cities Glasgow and Cambridge were chosen because they were geographically distant to participants, and would therefore minimise likelihood of prior familiarity with the restaurants or location.  For the University selection task, two university courses were selected at random from the complete university guide\footnote{The Complete University Guide:\\\url{www.thecompleteuniversityguide.co.uk}}, and the six top-ranked universities for each subject were selected as candidates.  We selected six because it enables us to scope our study, we found through two pilot studies that six data sources provided a sufficient challenge for users to explore the data and required them to use DP's main features. We manually collected the key data points from the websites for use in DP and into Excel spreadsheets (which 40\% of the participants in PS.1 said that had previously used to compare data).
 
