--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -309,7 +309,7 @@ A major challenge with integration from multiple sources is coreference consolid
 \end{center}
 \end{figure}
 
-To remain consistent with the drag-and-drop interactions used throughout the interface, we introduced the ability to simply drag one instance directly on top of another, to specify that these two items should be combined.  This action also caused the \emph{same-as display} in the lower left of the screen to indicate this new combined relationship.  The display also acted as a mechanism to delete/undo combinations, which reverted representations of instances back to their original, separate forms. An illustration of this interaction is provided in Figure \ref{fig:sameas}.  Since individually dragging and dropping items could be tedious for large groups of items, we extended this to allow entire groups to be dropped on to other groups.  DP would then identify matching pairs among items in the dragged and target groups by comparing the labels of items in each group, respectively.  Only exact matches (excepting white space and underscores) were considered to correspond to label matches, and these were automatically combined.  The rest were added to the target group as distinct elements, which could be manually combined by hand.\looseness=-1
+To remain consistent with the drag-and-drop interactions used throughout the interface, we introduced the ability to simply drag one instance directly on top of another, to specify that these two items should be combined.  This action also caused the \emph{Same-As display} in the lower left of the screen to indicate this new combined relationship.  The display also acted as a mechanism to delete/undo combinations, which reverted representations of instances back to their original, separate forms. An illustration of this interaction is provided in Figure \ref{fig:sameas}.  Since individually dragging and dropping items could be tedious for large groups of items, we extended this to allow entire groups to be dropped on to other groups.  DP would then identify matching pairs among items in the dragged and target groups by comparing the labels of items in each group, respectively.  Only exact matches (excepting white space and underscores) were considered to correspond to label matches, and these were automatically combined.  The rest were added to the target group as distinct elements, which could be manually combined by hand.\looseness=-1
 
 %We are considering more sophisticated / less fragile approaches to matching in the future, which would make the system assistive. By making consolidation user-driven, we gave users freedom to combine things when it suited them. As we saw in the system evaluation, while in certain circumstances users preferred combining representations, in others people preferred not to.  Thus, user-initiated consolidation afforded an additional flexibility that was ultimately deemed beneficial.
 
