--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -680,7 +680,7 @@ The work presented in this paper was supported by the SOCIAM project, funded by 
 
 % If you want to use smaller typesetting for the reference list,
 % uncomment the following line:
-% \small
+\small
 \bibliographystyle{acm-sigchi}
 \bibliography{carpedata}
 \end{document}
