--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -118,7 +118,7 @@ The information processing capabilities of humans enable them to opportunistical
 % \terms{Human Factors; Design; Measurement.}
 
 \section{Introduction}
-In recent years, an unprecedented quantity and variety of information has been made available as structured data on the Web.  The explosion of structured data APIs and downloadable data sets has arrived from many different sectors, including retail, banking, social networking, opinion and recommendation sites, mobile and desktop apps, as well as from new kinds sensors and devices such as wearable activity and bio-sensors. Beyond commercial apps and services, governments have embraced releasing data as a way of providing transparency and accountability to their citizens, causing a huge push to release ``open data'' to the public, at scales ranging from the smallest local councils to entire national departments.  
+In recent years, an unprecedented quantity and variety of information has been made available as structured data on the Web.  The explosion of structured data APIs and downloadable data sets has arrived from many different sectors, including retail, banking, social networking, opinion and recommendation sites, mobile and desktop apps, as well as from new kinds of sensors and devices such as wearable activity and bio-sensors. Beyond commercial apps and services, governments have embraced releasing data as a way of providing transparency and accountability to their citizens, causing a huge push to release ``open data'' to the public, at scales ranging from the smallest local councils to entire national departments.  
 
 A common goal for the release of such data has been to provide end-users with the ability to make more informed decisions pertaining to their health, wealth, and well-being \cite{Shadbolt:2006:SWR:1155313.1155373}.  Thus far, however, this data has been predominately used by app developers, journalists and other data specialists in one-off data analyses, apps and investigations.  Hence, as yet, these data still remain far from making a positive impact upon the activities of ordinary people. A core reason for this, we posit, is a lack of suitable tools for accessing and interrogating these heterogeneous data sources, as well as a means by which these disparate information sources can be effectively brought together and cross-referenced.  For example, most personal information management (PIM) tools only provide the capacity to manage small, pre-fixed sets of data types (such as calendar appointments, address book entries,  tools and to-do list items).  Alternatively, they may provide little or no support for structured data, as exhibited in word processors, text editors, and sketching/drawing tools \cite{infoscraps}.   
 
@@ -132,7 +132,7 @@ Second, we have carried out a structural analysis of data records from personal 
 Third, we have developed DataPalette, an interface that enables serendipitous ``data mixing,'' eliminating the need for people to write bespoke code to effectively combine and compare heterogeneous data.  DataPalette facilitates basic integration of diverse, heterogeneous data sources using simple interface gestures.  A usability evaluation of DataPalette has revealed that most users are comfortable with its interactive integration mechanisms, and that it effectively improves people's abilities to perform multi-faceted decision-making tasks using multiple sources.
 
 \section{Background}
-Our work has been informed by three fields of inquiry, comprising PIM, database integration, and end-user mashups and toolkits.  Our primary motivation stems from field studies in PIM, where the need for consolidating data has been observed. This is an area in which many challenges remain, however, specifically, in reconciling the differences that arise among representations when data is created by different people, at different times, and for different purposes. As described by Alon Halevy:
+Our work has been informed by three fields of inquiry, comprising PIM, database integration, and end-user mashups and toolkits.  Our primary motivation stems from field studies in PIM, where the need for consolidating data has been observed. This is an area in which many challenges remain, specifically, in reconciling the differences that arise among representations when data is created by different people, at different times, and for different purposes. As described by Alon Halevy:
 
 \begin{quote} 
 The problem stems from [the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature --- people think differently from one another even when faced with the same modelling goal~\cite{halevy2006data}.\looseness=-1
@@ -142,7 +142,7 @@ The benefits to the end-user in conquering data integration have been demonstrat
 
 Because of the multi-faceted challenges of data integration, contrasting approaches have been investigated in different research communities. In the fields of database integration and the Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373}, for example, automatic, machine-learning approaches, at either the level of \emph{ontology/schema matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching} have been pursued. In contrast, the end-user programming community has preferred user-driven approaches, in which the user orchestrates the process of reconciliation at various levels of specificity.  Systems that use this approach include ``mash-up makers'' (such as Mashmaker, \cite{intel_mashmaker}, Marmite \cite{Lin:2009:EPM:1502650.1502667}, and Vegemite \cite{Wong:2007:MMM:1240624.1240842}) and visual programming language environments such as Yahoo Pipes \cite{citeulike:8887891}.
 
-DataPalette's approach exhibits similarities with the user-driven methods just mentioned, in that the user performs data reconciliation using concrete instances as examples, but also avoids the need for any sort of programming.  Previous systems utilising this approach have included ``Cards, Relations and Templates'' \cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} both of which permit the user to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  \emph{DataPalette} extends this approach to a data workbench environment which allows people to easily consolidate and compare instances by their properties.
+DataPalette's approach exhibits similarities with the user-driven methods just mentioned, in that the user performs data reconciliation using concrete instances as examples, but also avoids the need for any sort of programming.  Previous systems utilising this approach have included ``Cards, Relations and Templates'' \cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} both of which permit the user to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  DataPalette extends this approach to a data workbench environment which allows people to easily consolidate and compare instances by their properties.
 
 % algorithms that train on a corpus of alignments and produce new alignments on unseen data schemas or instances, respectively
 
@@ -183,7 +183,7 @@ DataPalette's approach exhibits similarities with the user-driven methods just m
 \section{Pre-studies: Identifying Needs and Challenges}
 %% not sure where this goes >> but i want to keep it
 
-In the first of two pre-studies, we aimed to get an updated understanding of the use of multiple information sources in information gathering on the Web. Several basic questions drove our inquiry.  First, were people increasingly relying only on a handful of ``super-sites'' (Facebook, Wikipedia), or searching across distributed sources of information?  If the former were true, merely integrating PIM tools with the small number of super-sites would provide greater benefit than tackling the more challenging problem of integrating data from an array of arbitrary sources on the Web.  In a related vein, why did some people choose a single source for information gathering, while others selected multiple sources?  What advantages were gained in consulting multiple sources? 
+In the first pre-study, we aimed to get an updated understanding of the use of multiple information sources in information gathering on the Web. Several basic questions drove our inquiry.  First, were people increasingly relying only on a handful of ``super-sites'' (Facebook, Wikipedia), or searching across distributed sources of information?  If the former were true, merely integrating PIM tools with the small number of super-sites would provide greater benefit than tackling the more challenging problem of integrating data from an array of arbitrary sources on the Web.  In a related vein, why did some people choose a single source for information gathering, while others selected multiple sources?  What advantages were gained in consulting multiple sources? 
 
 % If they did what kinds of tasks did people required diverse information collection and were these kinds of tasks rare?  If so, this would suggest that perhaps specialised interfaces could be concocted for this purpose rather than it being a PIM need. 
 
@@ -197,11 +197,11 @@ In the first pre-study, we held semi-structured interviews to better understand 
 
 \subsubsection{Results - Heterogeneous Data Tasks}
 
-The 8 participants, recruited informally via word of mouth, consisted of 7 males and 1 female. They were split evenly into two age groups of 18--25 and 26--32.   
+The 8 participants, recruited informally via word of mouth, consisted of 7 males and 1 female, ranging in ages of 18--32.   
 % mention # that were computer scientists here?
 
 %\subsubsection{Question 1: Heterogenous Data Tasks}
-All participants reported regular usage of multiple websites to accomplish tasks, examples of which included: shopping (food, consumer electronics, hotels and flights), choosing a restaurant, job-seeking, selecting a university, seeking a recipe, or finding answers to technical problems.  When initiating a task, it was common for participants to use Google to discover several related websites, which would then be explored in different ways, depending on the task at hand. For shopping-oriented tasks, a balance of price, quality of merchandise, and speed of delivery was sought.  For product reviews, single sources alone were not trusted due to possible biases, or incomplete coverage of products' desired features.  
+All participants reported regular usage of multiple websites to accomplish tasks, examples of which included: shopping, choosing a restaurant, job-seeking, selecting a university, seeking a recipe, or finding answers to technical problems.  When initiating a task, it was common for participants to use Google to discover several related websites, which would then be explored in different ways, depending on the task at hand. For shopping-oriented tasks, a balance of price, quality of merchandise, and speed of delivery was sought.  For product reviews, single sources alone were not trusted due to possible biases, or incomplete coverage of products' desired features.  
 % Jim - Not sure if this is relevant. If it is, put it back in.
 % one participant said that video reviews of items were particularly helpful, as the aesthetics and scale of the item could be seen.
 % Social networks were identified to have different functions, such as different groups of people belong to each and share different types of opinions.  One participant said that they shared their outlook and gmail calendars, but only for work events and did not record social activities on them.
