--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -245,7 +245,7 @@ For each such data record, two complexity metrics were computed: the \emph{avera
 Once established, equivalent properties were examined, first, for naming inconsistencies.  Then, disregarding names, we examined whether the property's values were structurally compatible.  That is, if both values consisted of the same literal data type, or had one or more equivalent subfields, they were considered compatible.  Finally, we examined incompatibilities not covered by either naming or structural differences alone.  These \emph{modelling differences} arose from a variety of reasons, including, but not limited to, measurement unit inconsistencies, measurement method disagreements (e.g., ``dew point'' versus ``relative humidity''), differences in scale and granularity, and mismatches in what was being modelled (e.g., ``offer'' versus ``listing'').\looseness=-1
 
 \subsubsection{Results}
-While most of the data records examined in PS.2 were small and relatively simple, nearly one in each category was substantially larger and more complex. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Mapping equivalent properties among the instance records for each category revealed little overall overlap, except among the smallest records (which had few properties to begin with).  This finding suggests that consolidating such records would substantially increase the amount of information held by each.  Some of the unique properties were primarily for internal use (such as service-specific IDs).  Some, however, contained useful properties which were simply absent in alternate sources.  For example, among the 4 music data providers examined, only Spotify listed the source album that featured a particular song.  Such omissions revealed that data APIs often were reflective of each provider's own specific needs, necessitating the integration of information across multiple sources to create more complete and useful representations.
+While most of the data records examined in PS.2 were small and relatively simple, nearly one in each category was substantially larger and more complex. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Mapping equivalent properties among the instance records for each category revealed little overall overlap, except among the smallest records (which had few properties to begin with).  This finding suggested that consolidating such records would substantially increase the amount of information held by each.  Some of the unique properties were primarily for internal use (such as service-specific IDs).  Some, however, contained useful properties which were simply absent in alternate sources.  For example, among the 4 music data providers examined, only Spotify listed the source album that featured a particular song.  Such omissions revealed that data APIs often were reflective of each provider's own specific needs, necessitating the integration of information across multiple sources to create more complete and useful representations.
 
 A second observation in PS.2 was that equivalent properties were only rarely given the same name. Thus, terminological (or naming) heterogeneity was prevalent across nearly all records observed.  Structural inconsistencies were rarer, with the most common case occurring where a record that represented a value as a simple literal was expanded out in another as an entire sub-structure.  This most commonly occurred for fields with common string serialisations, such as dates, prices, and intervals.  Meanwhile, examples of modelling differences were even rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts from one source not mapping perfectly to those of another source, for example, due to differences in methods of measurement, or measurement units.
 % We also encountered two examples of records in which multiple data fields were nested as a single literal, textual ``description'' field.  This behaviour stems from the intended use of such records only by human readers, rather than in structured data applications.  
