--- a/carpedata.bib
+++ b/carpedata.bib
@@ -10,7 +10,7 @@
 @ARTICLE{user-subjective,
     author = {Ofer Bergman and Ruth Beyth-marom and Rafi Nachmias},
     title = {The user-subjective approach to personal information management systems},
-    journal = {Journal of the American Society for Information Science and Technology},
+    journal = {JASIST},
     year = {2003},
     volume = {54},
     pages = {872--878}
@@ -29,7 +29,7 @@
 @inproceedings{halevy2006data,
   title={Data integration: the teenage years},
   author={Halevy, A. and Rajaraman, A. and Ordille, J.},
-  booktitle={VLDB},
+  booktitle={Proc. VLDB '06},
   pages={9--16},
   year={2006}
 }
@@ -42,7 +42,7 @@
 
 @inproceedings{semex,
     author = {Cai, Yuhan and Dong, Xin L. and Halevy, Alon and Liu, Jing M. and Madhavan, Jayant},
-    booktitle = {SIGMOD '05},
+    booktitle = {Proc. SIGMOD '05},
     pages = {921--923},
     title = {{Personal information management with SEMEX}},
     year = {2005}
@@ -90,7 +90,7 @@
 @article{euzenat2004api,
  title={{An API for ontology alignment}},
  author={Euzenat, J.},
- journal={The Semantic Web--ISWC 2004},
+ journal={Proc ISWC '04},
  pages={698--712},
  year={2004}
 }
@@ -98,7 +98,7 @@
 @article{doan2003learning,
  title={{Learning to match ontologies on the Semantic Web}},
  author={Doan, A.H. and Madhavan, J. and Dhamankar, R. and Domingos, P. and Halevy, A.},
- journal={The VLDB Journal},
+ journal={VLDB Journal},
  volume={12},
  number={4},
  pages={303--319},
@@ -149,7 +149,7 @@
 @article{suchanek2011paris,
  title={{PARIS: probabilistic alignment of relations, instances, and schema}},
  author={Suchanek, F.M. and Abiteboul, S. and Senellart, P.},
- journal={Proceedings of the VLDB Endowment},
+ journal={Proc. VLDB '11},
  volume={5},
  number={3},
  pages={157--168},
@@ -159,7 +159,7 @@
 @article{citeulike:3875264,
     author = {Huynh, D. and Miller, R. and Karger, D.},
     issn = {15708268},
-    journal = {Web Semantics: Science, Services and Agents on the World Wide Web},
+    journal = {JWS},
     number = {4},
     pages = {274--282},
     title = {{Potluck: Data mash-up tool for casual users}},
@@ -192,7 +192,7 @@
 @inproceedings{parallax,
   title={{Parallax and companion: Set-based browsing for the data web}},
   author={Huynh, D.F. and Karger, D.},
-  booktitle={WWW Conference},
+  booktitle={Proc. WWW '09},
   year={2009}
 }
 
@@ -227,8 +227,8 @@
 @inproceedings{Lin:2009:EPM:1502650.1502667,
  author = {Lin, James and Wong, Jeffrey and Nichols, Jeffrey and Cypher, Allen and Lau, Tessa A.},
  title = {End-user programming of mashups with vegemite},
- booktitle = {Proceedings of the 14th international conference on Intelligent user interfaces},
- series = {IUI '09},
+ booktitle = {Proc. IUI '09},
+ series = {},
  year = {2009},
  isbn = {978-1-60558-168-2},
  location = {Sanibel Island, Florida, USA},
@@ -245,8 +245,8 @@
 @inproceedings{Wong:2007:MMM:1240624.1240842,
  author = {Wong, Jeffrey and Hong, Jason I.},
  title = {Making mashups with marmite: towards end-user programming for the web},
- booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
- series = {CHI '07},
+ booktitle = {Proc. CHI '07},
+ series = {},
  year = {2007},
  isbn = {978-1-59593-593-9},
  location = {San Jose, California, USA},
@@ -284,8 +284,7 @@
 @inproceedings{Dumais:2003:SIS:860435.860451,
  author = {Dumais, Susan and Cutrell, Edward and Cadiz, JJ and Jancke, Gavin and Sarin, Raman and Robbins, Daniel C.},
  title = {Stuff I've seen: a system for personal information retrieval and re-use},
- booktitle = {Proceedings of the 26th annual international ACM SIGIR conference on Research and development in informaion retrieval},
- series = {SIGIR '03},
+ booktitle = {SIGIR '03},
  year = {2003},
  isbn = {1-58113-646-3},
  location = {Toronto, Canada},
