--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -94,7 +94,7 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-The information processing capabilities of humans enable them to opportunistically draw and integrate knowledge from nearly any information source.  However, the integration of digital, structured data from diverse sources remains difficult, due to problems of heterogeneity that arise when data modelled separately are brought together.  In this paper, we present an investigation of the feasibility of extending Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, with the objective of allowing  users to take advantage of the emerging ecosystems of structured data currently becoming available.  In this study, we conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. Observations from these pre-studies led to \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed, first, that participants readily understood the new interaction mechanisms which were introduced.  Secondly, participants made more carefully justified decisions, even while weighing a greater number of factors, moreover expending less effort, during subjective-choice tasks when using DataPalette, than with a control set-up. 
+The information processing capabilities of humans enable them to opportunistically draw and integrate knowledge from nearly any information source.  However, the integration of digital, structured data from diverse sources remains difficult, due to problems of heterogeneity that arise when data modelled separately are brought together.  In this paper, we present an investigation of the feasibility of extending Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, with the objective of allowing  users to take advantage of the emerging ecosystems of structured data currently becoming available.  In this study, we conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. Observations from these pre-studies led to \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants readily understood the new interaction mechanisms which were introduced.  Participants made more carefully justified decisions, even while weighing a greater number of factors, moreover expending less effort, during subjective-choice tasks when using DataPalette, than with a control set-up. 
 
 %The information processing capabilities of humans enable people to opportunistically draw and integrate knowledge from nearly any information sources that become available to them.  However, supporting similar, opportunistic integration of digital, structured data from diverse sources remains difficult without tedious, manual integration, due to problems of heterogeneity that arise when data modelled and represented differently are brought together.  In this paper, we investigate the feasibility of minimally extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to take advantage of the vast emerging ecosystems of structured data being made available.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 % While people naturally draw from diverse information sources in the course of routine decision-making tasks, complementary support for managing heterogeneous data in digital Personal Information Management (PIM) tools remains poor. In this paper, we present an initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data on the Web. We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of DataPalette, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
@@ -530,7 +530,7 @@ In condition B, participants were given the option of using websites and/or a sp
 \end{center}
 \end{figure}
 
-When asked to rate the DP interface in the exit survey, all participants responded that they felt they understood the system, with sixteen out of the twenty participants (80\%) responding that they agreed \emph{very strongly} that they felt they understood it.  Eighteen (90\%) reported that they thought  DP was \emph{easy}, as well as \emph{useful}, with one person being neutral on each.  As to the statement ``DP is confusing'',  11 (55\%) strongly disagreed, 6 (30\%) disagreed, and 3 (15\%) agreed.  On reviewing the time trials, we discovered that the 3 participants who rated DP as confusing completed the trials significantly more slowly than the rest of the group. The survey results were visualised in Figure \ref{fig:survey}.
+When asked to rate the DP interface in the exit survey, all participants responded that they felt they understood the system, with sixteen out of the twenty participants (80\%) responding that they agreed \emph{very strongly}.  Eighteen (90\%) reported that they thought  DP was \emph{easy}, as well as \emph{useful}, with one person being neutral on each.  As to the statement ``DP is confusing'',  11 (55\%) strongly disagreed, 6 (30\%) disagreed, and 3 (15\%) agreed.  On reviewing the time trials, we discovered that the 3 participants who rated DP as confusing completed the trials significantly more slowly than the rest of the group. (See  Figure \ref{fig:survey}.)
 
 % (ANOVA?)
 
@@ -560,9 +560,9 @@ Assessing whether or not DP improved task performance (h3) was difficult, given 
 
 %% -> discussion and limitations
 \subsection{Design Limitations}
-In addition to the aforementioned feature requests, we observed a number of potential areas for improvement in the design of the DP interface.  One such area pertained to window layout and screen real-estate management: participants were prone to opening up a large number of windows, including maps and charts.  When their workspaces started to fill up, we found that participants spent a lot of time arranging windows, and that they tended to forget what each window represented.  We plan to address these issues in the next version of DataPalette.
+In addition to the aforementioned feature requests, we observed a number of potential areas for improvement in the design of the DP interface.  One such area pertained to window layout and screen real-estate management: participants were prone to opening up a large number of windows, including maps and charts.  When their workspaces started to fill up, we found that participants spent a lot of time arranging windows, and that they tended to forget what each window represented.  We plan to address these issues in the next version of DP.
 
-A key design decision we made at the outset was to target only the most common forms of heterogeneity observed in PS.2.  To expand DP's integration capabilities, we are considering a number of new interaction affordances for facilitating field combination and splitting, and unit of measure reconciliation.  This would cover a majority of the structural and modelling-oriented heterogeneity cases observed in DP.2.  Extending the ``Do What I Mean'' capabilities of the visualisation features to be unit-of-measure-aware, we believe, would be valuable to users.  A core problem with realising such an capability, however, is that few sources explicitly annotated data values with measurement units.
+A key design decision we made at the outset was to target only the most common forms of heterogeneity observed in PS.2.  To expand DP's integration capabilities, we are considering a number of new interaction affordances for facilitating field combination and splitting, and unit of measure reconciliation.  This would cover a majority of the structural and modelling-oriented heterogeneity cases observed in PS.2.  Extending the ``Do What I Mean'' capabilities of the visualisation features to be unit-of-measure-aware, we believe, would be valuable to users.  A core problem with realising such an capability, however, is that few sources explicitly annotated data values with measurement units.
 
 \subsection{Study Limitations}
 
@@ -636,6 +636,8 @@ Due to the promising findings of this study, we plan to continue investigating l
 %% this was having a sufficiently low barrier of effort to use, provided both the flexibility and facility to support information gathering tasks associated with decision-making activities.  The result was people weighed more factors from a greater number of information sources, broadening the scope of their information gathering for such decisions, while expending comparable or less effort and time.
 
 %% Moreover, through our pre-studies and DataPalette evaluation, we have shown that much of heterogeneity exhibited by structured data feeds available on the Web today can be managed reasonably through easy to use, and intuitive interactive approaches for end-users. 
+
+\newpage
 
 \section{Acknowledgements} 
 
